--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>svelte tic tac</title>
+
+    <title>(tic tac)^2</title>
+    <meta name="title" content="(tic tac)^2" />
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="jnbaldwin.com" />
+    <meta property="og:title" content="(tic tac)^2" />
+    <meta property="og:description" content="mediocre implementation of ultimate tic tac toe" />
+    <meta property="og:image" content="/android-chrome-192x192.png" />
+
   </head>
   <body>
     <div id="app"></div>
